# mds_technical_test_backend

./: .gitignore  Dockerfile  pyproject.toml  readme.md
apps/cart_api/: main.py  service.py
lib/constants/: database.py  errors.py
lib/database/: mongo.py
lib/dtos/: cart.dto.py  cart_dto.py
lib/enums/: database.py
lib/interface/: database.py  secret_manager.py
lib/models/: base_item_model.py  cart_item_model.py  cart_model.py
lib/secrets/: env_secret_manager.py
lib/seed/: mongo_seed.py
lib/tests/: test_env_sm.py  test_mongo.py
lib/utils/: singleton.py
