[tool.poetry]
name = "mds-backend-technical-test"
version = "0.1.0"
description = ""
authors = ["angel lindarte <angel@pandas.com.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.114.2"}
pytest = "^8.3.3"
pymongo = "^4.8.0"
pydantic = "^2.9.1"
mongomock = "^4.2.0.post1"
pytest-cov = "^5.0.0"
pydash = "^8.0.3"
faker = "^28.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
